--- a/Anudip Assignment/calculator.html/html project1.html
+++ b/Anudip Assignment/calculator.html/html project1.html
@@ -4,7 +4,7 @@
 <title>calculator</title>
 </head>
 <body>
-<h1font size="20" color="blue">calculator</h1>
+<h1font size="20" color="blue">calculator</h1>-
 <img src="calculator.jpeg.png">
 <form action="/action_page.php">
   <label for="input1">input1</label>
